# static-ip-fix-windows

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  static-ip-fix.example.ini
.github/: release-please-config.json
.github/scripts/: version-manager.sh
.github/workflows/: ci copy.yml.invalid  ci.yml  release.yml
include/: config.h  dns.h  network.h  status.h
include/tui/: console.h  tui.h  ui.h
scripts/: ghp.ps1  push.ps1  release.ps1
src/: config.c  dns.c  main.c  network.c  process.c  process.h  status.c  utils.c  utils.h
src/tui/: console.c  screens.c  tui.c  ui.c
tests/: test.h  test_utils.c
